@@ -1,3 +1,7 @@
+2004-04-20  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* site/index.html: Half-baken fix for javascript.
+
 2004-04-19  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/devel/participating/index.html (procedure): Add CVS
